inc/sqlsrc/parser/bison_parser.output
Terminals unused in grammar

    PARAMETERS
    TEMPORARY
    NVARCHAR
    RESTRICT
    ANALYZE
    CASCADE
    CONTROL
    DEFAULT
    EXPLAIN
    SCHEMAS
    SPATIAL
    VIRTUAL
    BEFORE
    DIRECT
    ESCAPE
    GLOBAL
    RENAME
    SCHEMA
    SORTED
    UNLOAD
    AFTER
    DELTA
    LOCAL
    MERGE
    MINUS
    CALL
    HASH
    LOAD
    PLAN
    ADD
    OFF
    LESS
    GREATER
    NOTNULL
    UMINUS


Grammar

    0 $accept: input $end

    1 input: statement_list opt_semicolon

    2 statement_list: statement
    3               | statement_list ';' statement

    4 statement: prepare_statement opt_hints
    5          | preparable_statement opt_hints
    6          | show_statement
    7          | import_statement
    8          | export_statement

    9 preparable_statement: select_statement
   10                     | create_statement
   11                     | insert_statement
   12                     | delete_statement
   13                     | truncate_statement
   14                     | update_statement
   15                     | drop_statement
   16                     | alter_statement
   17                     | execute_statement
   18                     | transaction_statement

   19 opt_hints: WITH HINT '(' hint_list ')'
   20          | %empty

   21 hint_list: hint
   22          | hint_list ',' hint

   23 hint: IDENTIFIER
   24     | IDENTIFIER '(' literal_list ')'

   25 transaction_statement: BEGIN opt_transaction_keyword
   26                      | ROLLBACK opt_transaction_keyword
   27                      | COMMIT opt_transaction_keyword

   28 opt_transaction_keyword: TRANSACTION
   29                        | %empty

   30 prepare_statement: PREPARE IDENTIFIER FROM prepare_target_query

   31 prepare_target_query: STRING

   32 execute_statement: EXECUTE IDENTIFIER
   33                  | EXECUTE IDENTIFIER '(' opt_literal_list ')'

   34 import_statement: IMPORT FROM file_type FILE file_path INTO table_name
   35                 | COPY table_name FROM file_path opt_file_type

   36 file_type: IDENTIFIER

   37 file_path: string_literal

   38 opt_file_type: WITH FORMAT file_type
   39              | %empty

   40 export_statement: COPY table_name TO file_path opt_file_type

   41 show_statement: SHOW TABLES
   42               | SHOW COLUMNS table_name
   43               | DESCRIBE table_name

   44 create_statement: CREATE TABLE opt_not_exists table_name FROM IDENTIFIER FILE file_path
   45                 | CREATE TABLE opt_not_exists table_name '(' table_elem_commalist ')'
   46                 | CREATE TABLE opt_not_exists table_name AS select_statement
   47                 | CREATE INDEX opt_not_exists opt_index_name ON table_name '(' ident_commalist ')'
   48                 | CREATE VIEW opt_not_exists table_name opt_column_list AS select_statement

   49 opt_not_exists: IF NOT EXISTS
   50               | %empty

   51 table_elem_commalist: table_elem
   52                     | table_elem_commalist ',' table_elem

   53 table_elem: column_def
   54           | table_constraint

   55 column_def: IDENTIFIER column_type opt_column_constraints

   56 column_type: BIGINT
   57            | BOOLEAN
   58            | CHAR '(' INTVAL ')'
   59            | CHARACTER_VARYING '(' INTVAL ')'
   60            | DATE
   61            | DATETIME
   62            | DECIMAL opt_decimal_specification
   63            | DOUBLE
   64            | FLOAT
   65            | INT
   66            | INTEGER
   67            | LONG
   68            | REAL
   69            | SMALLINT
   70            | TEXT
   71            | TIME opt_time_precision
   72            | TIMESTAMP
   73            | VARCHAR '(' INTVAL ')'

   74 opt_time_precision: '(' INTVAL ')'
   75                   | %empty

   76 opt_decimal_specification: '(' INTVAL ',' INTVAL ')'
   77                          | '(' INTVAL ')'
   78                          | %empty

   79 opt_column_constraints: column_constraint_set
   80                       | %empty

   81 column_constraint_set: column_constraint
   82                      | column_constraint_set column_constraint

   83 column_constraint: PRIMARY KEY
   84                  | UNIQUE
   85                  | NULL
   86                  | NOT NULL

   87 table_constraint: PRIMARY KEY '(' ident_commalist ')'
   88                 | UNIQUE '(' ident_commalist ')'

   89 drop_statement: DROP TABLE opt_exists table_name
   90               | DROP VIEW opt_exists table_name
   91               | DEALLOCATE PREPARE IDENTIFIER
   92               | DROP INDEX opt_exists IDENTIFIER

   93 opt_exists: IF EXISTS
   94           | %empty

   95 alter_statement: ALTER TABLE opt_exists table_name alter_action

   96 alter_action: drop_action

   97 drop_action: DROP COLUMN opt_exists IDENTIFIER

   98 delete_statement: DELETE FROM table_name opt_where

   99 truncate_statement: TRUNCATE table_name

  100 insert_statement: INSERT INTO table_name opt_column_list VALUES '(' literal_list ')'
  101                 | INSERT INTO table_name opt_column_list select_no_paren

  102 opt_column_list: '(' ident_commalist ')'
  103                | %empty

  104 update_statement: UPDATE table_ref_name_no_alias SET update_clause_commalist opt_where

  105 update_clause_commalist: update_clause
  106                        | update_clause_commalist ',' update_clause

  107 update_clause: IDENTIFIER '=' expr

  108 select_statement: opt_with_clause select_with_paren
  109                 | opt_with_clause select_no_paren
  110                 | opt_with_clause select_with_paren set_operator select_within_set_operation opt_order opt_limit

  111 select_within_set_operation: select_with_paren
  112                            | select_within_set_operation_no_parentheses

  113 select_within_set_operation_no_parentheses: select_clause
  114                                           | select_clause set_operator select_within_set_operation

  115 select_with_paren: '(' select_no_paren ')'
  116                  | '(' select_with_paren ')'

  117 select_no_paren: select_clause opt_order opt_limit opt_locking_clause
  118                | select_clause set_operator select_within_set_operation opt_order opt_limit opt_locking_clause

  119 set_operator: set_type opt_all

  120 set_type: UNION
  121         | INTERSECT
  122         | EXCEPT

  123 opt_all: ALL
  124        | %empty

  125 select_clause: SELECT opt_top opt_distinct select_list opt_from_clause opt_where opt_group

  126 opt_distinct: DISTINCT
  127             | %empty

  128 select_list: expr_list

  129 opt_from_clause: from_clause
  130                | %empty

  131 from_clause: FROM table_ref

  132 opt_where: WHERE expr
  133          | %empty

  134 opt_group: GROUP BY expr_list opt_having
  135          | %empty

  136 opt_having: HAVING expr
  137           | %empty

  138 opt_order: ORDER BY order_list
  139          | %empty

  140 order_list: order_desc
  141           | order_list ',' order_desc

  142 order_desc: expr opt_order_type

  143 opt_order_type: ASC
  144               | DESC
  145               | %empty

  146 opt_top: TOP int_literal
  147        | %empty

  148 opt_limit: LIMIT expr
  149          | OFFSET expr
  150          | LIMIT expr OFFSET expr
  151          | LIMIT ALL
  152          | LIMIT ALL OFFSET expr
  153          | %empty

  154 expr_list: expr_alias
  155          | expr_list ',' expr_alias

  156 opt_literal_list: literal_list
  157                 | %empty

  158 literal_list: literal
  159             | literal_list ',' literal

  160 expr_alias: expr opt_alias

  161 expr: operand
  162     | between_expr
  163     | logic_expr
  164     | exists_expr
  165     | in_expr

  166 operand: '(' expr ')'
  167        | array_index
  168        | scalar_expr
  169        | unary_expr
  170        | binary_expr
  171        | case_expr
  172        | function_expr
  173        | extract_expr
  174        | cast_expr
  175        | array_expr
  176        | '(' select_no_paren ')'

  177 scalar_expr: column_name
  178            | literal

  179 unary_expr: '-' operand
  180           | NOT operand
  181           | operand ISNULL
  182           | operand IS NULL
  183           | operand IS NOT NULL

  184 binary_expr: comp_expr
  185            | operand '-' operand
  186            | operand '+' operand
  187            | operand '/' operand
  188            | operand '*' operand
  189            | operand '%' operand
  190            | operand '^' operand
  191            | operand LIKE operand
  192            | operand NOT LIKE operand
  193            | operand ILIKE operand
  194            | operand CONCAT operand

  195 logic_expr: expr AND expr
  196           | expr OR expr

  197 in_expr: operand IN '(' expr_list ')'
  198        | operand NOT IN '(' expr_list ')'
  199        | operand IN '(' select_no_paren ')'
  200        | operand NOT IN '(' select_no_paren ')'

  201 case_expr: CASE expr case_list END
  202          | CASE expr case_list ELSE expr END
  203          | CASE case_list END
  204          | CASE case_list ELSE expr END

  205 case_list: WHEN expr THEN expr
  206          | case_list WHEN expr THEN expr

  207 exists_expr: EXISTS '(' select_no_paren ')'
  208            | NOT EXISTS '(' select_no_paren ')'

  209 comp_expr: operand '=' operand
  210          | operand EQUALS operand
  211          | operand NOTEQUALS operand
  212          | operand '<' operand
  213          | operand '>' operand
  214          | operand LESSEQ operand
  215          | operand GREATEREQ operand

  216 function_expr: IDENTIFIER '(' ')'
  217              | IDENTIFIER '(' opt_distinct expr_list ')'

  218 extract_expr: EXTRACT '(' datetime_field FROM expr ')'

  219 cast_expr: CAST '(' expr AS column_type ')'

  220 datetime_field: SECOND
  221               | MINUTE
  222               | HOUR
  223               | DAY
  224               | MONTH
  225               | YEAR

  226 datetime_field_plural: SECONDS
  227                      | MINUTES
  228                      | HOURS
  229                      | DAYS
  230                      | MONTHS
  231                      | YEARS

  232 duration_field: datetime_field
  233               | datetime_field_plural

  234 array_expr: ARRAY '[' expr_list ']'

  235 array_index: operand '[' int_literal ']'

  236 between_expr: operand BETWEEN operand AND operand

  237 column_name: IDENTIFIER
  238            | IDENTIFIER '.' IDENTIFIER
  239            | '*'
  240            | IDENTIFIER '.' '*'

  241 literal: string_literal
  242        | bool_literal
  243        | num_literal
  244        | null_literal
  245        | date_literal
  246        | interval_literal
  247        | param_expr

  248 string_literal: STRING

  249 bool_literal: TRUE
  250             | FALSE

  251 num_literal: FLOATVAL
  252            | int_literal

  253 int_literal: INTVAL

  254 null_literal: NULL

  255 date_literal: DATE STRING

  256 interval_literal: int_literal duration_field
  257                 | INTERVAL STRING datetime_field
  258                 | INTERVAL STRING

  259 param_expr: '?'

  260 table_ref: table_ref_atomic
  261          | table_ref_commalist ',' table_ref_atomic

  262 table_ref_atomic: nonjoin_table_ref_atomic
  263                 | join_clause

  264 nonjoin_table_ref_atomic: table_ref_name
  265                         | '(' select_statement ')' opt_table_alias

  266 table_ref_commalist: table_ref_atomic
  267                    | table_ref_commalist ',' table_ref_atomic

  268 table_ref_name: table_name opt_table_alias

  269 table_ref_name_no_alias: table_name

  270 table_name: IDENTIFIER
  271           | IDENTIFIER '.' IDENTIFIER

  272 opt_index_name: IDENTIFIER
  273               | %empty

  274 table_alias: alias
  275            | AS IDENTIFIER '(' ident_commalist ')'

  276 opt_table_alias: table_alias
  277                | %empty

  278 alias: AS IDENTIFIER
  279      | IDENTIFIER

  280 opt_alias: alias
  281          | %empty

  282 opt_locking_clause: opt_locking_clause_list
  283                   | %empty

  284 opt_locking_clause_list: locking_clause
  285                        | opt_locking_clause_list locking_clause

  286 locking_clause: FOR row_lock_mode opt_row_lock_policy
  287               | FOR row_lock_mode OF ident_commalist opt_row_lock_policy

  288 row_lock_mode: UPDATE
  289              | NO KEY UPDATE
  290              | SHARE
  291              | KEY SHARE

  292 opt_row_lock_policy: SKIP LOCKED
  293                    | NOWAIT
  294                    | %empty

  295 opt_with_clause: with_clause
  296                | %empty

  297 with_clause: WITH with_description_list

  298 with_description_list: with_description
  299                      | with_description_list ',' with_description

  300 with_description: IDENTIFIER AS select_with_paren

  301 join_clause: table_ref_atomic NATURAL JOIN nonjoin_table_ref_atomic
  302            | table_ref_atomic opt_join_type JOIN table_ref_atomic ON join_condition
  303            | table_ref_atomic opt_join_type JOIN table_ref_atomic USING '(' column_name ')'

  304 opt_join_type: INNER
  305              | LEFT OUTER
  306              | LEFT
  307              | RIGHT OUTER
  308              | RIGHT
  309              | FULL OUTER
  310              | OUTER
  311              | FULL
  312              | CROSS
  313              | %empty

  314 join_condition: expr

  315 opt_semicolon: ';'
  316              | %empty

  317 ident_commalist: IDENTIFIER
  318                | ident_commalist ',' IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 189
    '(' (40) 19 24 33 45 47 58 59 73 74 76 77 87 88 100 102 115 116 166 176 197 198 199 200 207 208 216 217 218 219 265 275 303
    ')' (41) 19 24 33 45 47 58 59 73 74 76 77 87 88 100 102 115 116 166 176 197 198 199 200 207 208 216 217 218 219 265 275 303
    '*' (42) 188 239 240
    '+' (43) 186
    ',' (44) 22 52 76 106 141 155 159 261 267 299 318
    '-' (45) 179 185
    '.' (46) 238 240 271
    '/' (47) 187
    ';' (59) 3 315
    '<' (60) 212
    '=' (61) 107 209
    '>' (62) 213
    '?' (63) 259
    '[' (91) 234 235
    ']' (93) 234 235
    '^' (94) 190
    error (256)
    IDENTIFIER <sval> (258) 23 24 30 32 33 36 44 55 91 92 97 107 216 217 237 238 240 270 271 272 275 278 279 300 317 318
    STRING <sval> (259) 31 248 255 257 258
    FLOATVAL <fval> (260) 251
    INTVAL <ival> (261) 58 59 73 74 76 77 253
    DEALLOCATE (262) 91
    PARAMETERS (263)
    INTERSECT (264) 121
    TEMPORARY (265)
    TIMESTAMP (266) 72
    DISTINCT (267) 126
    NVARCHAR (268)
    RESTRICT (269)
    TRUNCATE (270) 99
    ANALYZE (271)
    BETWEEN (272) 236
    CASCADE (273)
    COLUMNS (274) 42
    CONTROL (275)
    DEFAULT (276)
    EXECUTE (277) 32 33
    EXPLAIN (278)
    INTEGER (279) 66
    NATURAL (280) 301
    PREPARE (281) 30 91
    PRIMARY (282) 83 87
    SCHEMAS (283)
    CHARACTER_VARYING (284) 59
    REAL (285) 68
    DECIMAL (286) 62
    SMALLINT (287) 69
    BIGINT (288) 56
    SPATIAL (289)
    VARCHAR (290) 73
    VIRTUAL (291)
    DESCRIBE (292) 43
    BEFORE (293)
    COLUMN (294) 97
    CREATE (295) 44 45 46 47 48
    DELETE (296) 98
    DIRECT (297)
    DOUBLE (298) 63
    ESCAPE (299)
    EXCEPT (300) 122
    EXISTS (301) 49 93 207 208
    EXTRACT (302) 218
    CAST (303) 219
    FORMAT (304) 38
    GLOBAL (305)
    HAVING (306) 136
    IMPORT (307) 34
    INSERT (308) 100 101
    ISNULL (309) 181
    OFFSET (310) 149 150 152
    RENAME (311)
    SCHEMA (312)
    SELECT (313) 125
    SORTED (314)
    TABLES (315) 41
    UNIQUE (316) 84 88
    UNLOAD (317)
    UPDATE (318) 104 288 289
    VALUES (319) 100
    AFTER (320)
    ALTER (321) 95
    CROSS (322) 312
    DELTA (323)
    FLOAT (324) 64
    GROUP (325) 134
    INDEX (326) 47 92
    INNER (327) 304
    LIMIT (328) 148 150 151 152
    LOCAL (329)
    MERGE (330)
    MINUS (331)
    ORDER (332) 138
    OUTER (333) 305 307 309 310
    RIGHT (334) 307 308
    TABLE (335) 44 45 46 89 95
    UNION (336) 120
    USING (337) 303
    WHERE (338) 132
    CALL (339)
    CASE (340) 201 202 203 204
    CHAR (341) 58
    COPY (342) 35 40
    DATE (343) 60 255
    DATETIME (344) 61
    DESC (345) 144
    DROP (346) 89 90 92 97
    ELSE (347) 202 204
    FILE (348) 34 44
    FROM (349) 30 34 35 44 98 131 218
    FULL (350) 309 311
    HASH (351)
    HINT (352) 19
    INTO (353) 34 100 101
    JOIN (354) 301 302 303
    LEFT (355) 305 306
    LIKE (356) 191 192
    LOAD (357)
    LONG (358) 67
    NULL (359) 85 86 182 183 254
    PLAN (360)
    SHOW (361) 41 42
    TEXT (362) 70
    THEN (363) 205 206
    TIME (364) 71
    VIEW (365) 48 90
    WHEN (366) 205 206
    WITH (367) 19 38 297
    ADD (368)
    ALL (369) 123 151 152
    AND (370) 195 236
    ASC (371) 143
    END (372) 201 202 203 204
    FOR (373) 286 287
    INT (374) 65
    KEY (375) 83 87 289 291
    NOT (376) 49 86 180 183 192 198 200 208
    OFF (377)
    SET (378) 104
    TOP (379) 146
    AS (380) 46 48 219 275 278 300
    BY (381) 134 138
    IF (382) 49 93
    IN (383) 197 198 199 200
    IS (384) 182 183
    OF (385) 287
    ON (386) 47 302
    OR (387) 196
    TO (388) 40
    NO (389) 289
    ARRAY (390) 234
    CONCAT (391) 194
    ILIKE (392) 193
    SECOND (393) 220
    MINUTE (394) 221
    HOUR (395) 222
    DAY (396) 223
    MONTH (397) 224
    YEAR (398) 225
    SECONDS (399) 226
    MINUTES (400) 227
    HOURS (401) 228
    DAYS (402) 229
    MONTHS (403) 230
    YEARS (404) 231
    INTERVAL (405) 257 258
    TRUE (406) 249
    FALSE (407) 250
    BOOLEAN (408) 57
    TRANSACTION (409) 28
    BEGIN (410) 25
    COMMIT (411) 27
    ROLLBACK (412) 26
    NOWAIT (413) 293
    SKIP (414) 292
    LOCKED (415) 292
    SHARE (416) 290 291
    EQUALS (417) 210
    NOTEQUALS (418) 211
    LESS (419)
    GREATER (420)
    LESSEQ (421) 214
    GREATEREQ (422) 215
    NOTNULL (423)
    UMINUS (424)


Nonterminals, with rules where they appear

    $accept (187)
        on left: 0
    input (188)
        on left: 1
        on right: 0
    statement_list <stmt_vec> (189)
        on left: 2 3
        on right: 1 3
    statement <statement> (190)
        on left: 4 5 6 7 8
        on right: 2 3
    preparable_statement <statement> (191)
        on left: 9 10 11 12 13 14 15 16 17 18
        on right: 5
    opt_hints <expr_vec> (192)
        on left: 19 20
        on right: 4 5
    hint_list <expr_vec> (193)
        on left: 21 22
        on right: 19 22
    hint <expr> (194)
        on left: 23 24
        on right: 21 22
    transaction_statement <transaction_stmt> (195)
        on left: 25 26 27
        on right: 18
    opt_transaction_keyword (196)
        on left: 28 29
        on right: 25 26 27
    prepare_statement <prep_stmt> (197)
        on left: 30
        on right: 4
    prepare_target_query <sval> (198)
        on left: 31
        on right: 30
    execute_statement <exec_stmt> (199)
        on left: 32 33
        on right: 17
    import_statement <import_stmt> (200)
        on left: 34 35
        on right: 7
    file_type <import_type_t> (201)
        on left: 36
        on right: 34 38
    file_path <sval> (202)
        on left: 37
        on right: 34 35 40 44
    opt_file_type <import_type_t> (203)
        on left: 38 39
        on right: 35 40
    export_statement <export_stmt> (204)
        on left: 40
        on right: 8
    show_statement <show_stmt> (205)
        on left: 41 42 43
        on right: 6
    create_statement <create_stmt> (206)
        on left: 44 45 46 47 48
        on right: 10
    opt_not_exists <bval> (207)
        on left: 49 50
        on right: 44 45 46 47 48
    table_elem_commalist <table_element_vec> (208)
        on left: 51 52
        on right: 45 52
    table_elem <table_element_t> (209)
        on left: 53 54
        on right: 51 52
    column_def <column_t> (210)
        on left: 55
        on right: 53
    column_type <column_type_t> (211)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 55 219
    opt_time_precision <ival> (212)
        on left: 74 75
        on right: 71
    opt_decimal_specification <ival_pair> (213)
        on left: 76 77 78
        on right: 62
    opt_column_constraints <column_constraint_set> (214)
        on left: 79 80
        on right: 55
    column_constraint_set <column_constraint_set> (215)
        on left: 81 82
        on right: 79 82
    column_constraint <column_constraint_t> (216)
        on left: 83 84 85 86
        on right: 81 82
    table_constraint <table_constraint_t> (217)
        on left: 87 88
        on right: 54
    drop_statement <drop_stmt> (218)
        on left: 89 90 91 92
        on right: 15
    opt_exists <bval> (219)
        on left: 93 94
        on right: 89 90 92 95 97
    alter_statement <alter_stmt> (220)
        on left: 95
        on right: 16
    alter_action <alter_action_t> (221)
        on left: 96
        on right: 95
    drop_action <drop_action_t> (222)
        on left: 97
        on right: 96
    delete_statement <delete_stmt> (223)
        on left: 98
        on right: 12
    truncate_statement <delete_stmt> (224)
        on left: 99
        on right: 13
    insert_statement <insert_stmt> (225)
        on left: 100 101
        on right: 11
    opt_column_list <str_vec> (226)
        on left: 102 103
        on right: 48 100 101
    update_statement <update_stmt> (227)
        on left: 104
        on right: 14
    update_clause_commalist <update_vec> (228)
        on left: 105 106
        on right: 104 106
    update_clause <update_t> (229)
        on left: 107
        on right: 105 106
    select_statement <select_stmt> (230)
        on left: 108 109 110
        on right: 9 46 48 265
    select_within_set_operation <select_stmt> (231)
        on left: 111 112
        on right: 110 114 118
    select_within_set_operation_no_parentheses <select_stmt> (232)
        on left: 113 114
        on right: 112
    select_with_paren <select_stmt> (233)
        on left: 115 116
        on right: 108 110 111 116 300
    select_no_paren <select_stmt> (234)
        on left: 117 118
        on right: 101 109 115 176 199 200 207 208
    set_operator <set_operator_t> (235)
        on left: 119
        on right: 110 114 118
    set_type <set_operator_t> (236)
        on left: 120 121 122
        on right: 119
    opt_all <bval> (237)
        on left: 123 124
        on right: 119
    select_clause <select_stmt> (238)
        on left: 125
        on right: 113 114 117 118
    opt_distinct <bval> (239)
        on left: 126 127
        on right: 125 217
    select_list <expr_vec> (240)
        on left: 128
        on right: 125
    opt_from_clause <table> (241)
        on left: 129 130
        on right: 125
    from_clause <table> (242)
        on left: 131
        on right: 129
    opt_where <expr> (243)
        on left: 132 133
        on right: 98 104 125
    opt_group <group_t> (244)
        on left: 134 135
        on right: 125
    opt_having <expr> (245)
        on left: 136 137
        on right: 134
    opt_order <order_vec> (246)
        on left: 138 139
        on right: 110 117 118
    order_list <order_vec> (247)
        on left: 140 141
        on right: 138 141
    order_desc <order> (248)
        on left: 142
        on right: 140 141
    opt_order_type <order_type> (249)
        on left: 143 144 145
        on right: 142
    opt_top <limit> (250)
        on left: 146 147
        on right: 125
    opt_limit <limit> (251)
        on left: 148 149 150 151 152 153
        on right: 110 117 118
    expr_list <expr_vec> (252)
        on left: 154 155
        on right: 128 134 155 197 198 217 234
    opt_literal_list <expr_vec> (253)
        on left: 156 157
        on right: 33
    literal_list <expr_vec> (254)
        on left: 158 159
        on right: 24 100 156 159
    expr_alias <expr> (255)
        on left: 160
        on right: 154 155
    expr <expr> (256)
        on left: 161 162 163 164 165
        on right: 107 132 136 142 148 149 150 152 160 166 195 196 201 202 204 205 206 218 219 314
    operand <expr> (257)
        on left: 166 167 168 169 170 171 172 173 174 175 176
        on right: 161 179 180 181 182 183 185 186 187 188 189 190 191 192 193 194 197 198 199 200 209 210 211 212 213 214 215 235 236
    scalar_expr <expr> (258)
        on left: 177 178
        on right: 168
    unary_expr <expr> (259)
        on left: 179 180 181 182 183
        on right: 169
    binary_expr <expr> (260)
        on left: 184 185 186 187 188 189 190 191 192 193 194
        on right: 170
    logic_expr <expr> (261)
        on left: 195 196
        on right: 163
    in_expr <expr> (262)
        on left: 197 198 199 200
        on right: 165
    case_expr <expr> (263)
        on left: 201 202 203 204
        on right: 171
    case_list <expr> (264)
        on left: 205 206
        on right: 201 202 203 204 206
    exists_expr <expr> (265)
        on left: 207 208
        on right: 164
    comp_expr <expr> (266)
        on left: 209 210 211 212 213 214 215
        on right: 184
    function_expr <expr> (267)
        on left: 216 217
        on right: 172
    extract_expr <expr> (268)
        on left: 218
        on right: 173
    cast_expr <expr> (269)
        on left: 219
        on right: 174
    datetime_field <datetime_field> (270)
        on left: 220 221 222 223 224 225
        on right: 218 232 257
    datetime_field_plural <datetime_field> (271)
        on left: 226 227 228 229 230 231
        on right: 233
    duration_field <datetime_field> (272)
        on left: 232 233
        on right: 256
    array_expr <expr> (273)
        on left: 234
        on right: 175
    array_index <expr> (274)
        on left: 235
        on right: 167
    between_expr <expr> (275)
        on left: 236
        on right: 162
    column_name <expr> (276)
        on left: 237 238 239 240
        on right: 177 303
    literal <expr> (277)
        on left: 241 242 243 244 245 246 247
        on right: 158 159 178
    string_literal <expr> (278)
        on left: 248
        on right: 37 241
    bool_literal <expr> (279)
        on left: 249 250
        on right: 242
    num_literal <expr> (280)
        on left: 251 252
        on right: 243
    int_literal <expr> (281)
        on left: 253
        on right: 146 235 252 256
    null_literal <expr> (282)
        on left: 254
        on right: 244
    date_literal <expr> (283)
        on left: 255
        on right: 245
    interval_literal <expr> (284)
        on left: 256 257 258
        on right: 246
    param_expr <expr> (285)
        on left: 259
        on right: 247
    table_ref <table> (286)
        on left: 260 261
        on right: 131
    table_ref_atomic <table> (287)
        on left: 262 263
        on right: 260 261 266 267 301 302 303
    nonjoin_table_ref_atomic <table> (288)
        on left: 264 265
        on right: 262 301
    table_ref_commalist <table_vec> (289)
        on left: 266 267
        on right: 261 267
    table_ref_name <table> (290)
        on left: 268
        on right: 264
    table_ref_name_no_alias <table> (291)
        on left: 269
        on right: 104
    table_name <table_name> (292)
        on left: 270 271
        on right: 34 35 40 42 43 44 45 46 47 48 89 90 95 98 99 100 101 268 269
    opt_index_name <sval> (293)
        on left: 272 273
        on right: 47
    table_alias <alias_t> (294)
        on left: 274 275
        on right: 276
    opt_table_alias <alias_t> (295)
        on left: 276 277
        on right: 265 268
    alias <alias_t> (296)
        on left: 278 279
        on right: 274 280
    opt_alias <alias_t> (297)
        on left: 280 281
        on right: 160
    opt_locking_clause <locking_clause_vec> (298)
        on left: 282 283
        on right: 117 118
    opt_locking_clause_list <locking_clause_vec> (299)
        on left: 284 285
        on right: 282 285
    locking_clause <locking_t> (300)
        on left: 286 287
        on right: 284 285
    row_lock_mode <lock_mode_t> (301)
        on left: 288 289 290 291
        on right: 286 287
    opt_row_lock_policy <lock_wait_policy_t> (302)
        on left: 292 293 294
        on right: 286 287
    opt_with_clause <with_description_vec> (303)
        on left: 295 296
        on right: 108 109 110
    with_clause <with_description_vec> (304)
        on left: 297
        on right: 295
    with_description_list <with_description_vec> (305)
        on left: 298 299
        on right: 297 299
    with_description <with_description_t> (306)
        on left: 300
        on right: 298 299
    join_clause <table> (307)
        on left: 301 302 303
        on right: 263
    opt_join_type <join_type> (308)
        on left: 304 305 306 307 308 309 310 311 312 313
        on right: 302 303
    join_condition <expr> (309)
        on left: 314
        on right: 302
    opt_semicolon (310)
        on left: 315 316
        on right: 1
    ident_commalist <str_vec> (311)
        on left: 317 318
        on right: 47 87 88 102 275 287 318


State 0

    0 $accept: • input $end

    DEALLOCATE  shift, and go to state 1
    TRUNCATE    shift, and go to state 2
    EXECUTE     shift, and go to state 3
    PREPARE     shift, and go to state 4
    DESCRIBE    shift, and go to state 5
    CREATE      shift, and go to state 6
    DELETE      shift, and go to state 7
    IMPORT      shift, and go to state 8
    INSERT      shift, and go to state 9
    UPDATE      shift, and go to state 10
    ALTER       shift, and go to state 11
    COPY        shift, and go to state 12
    DROP        shift, and go to state 13
    SHOW        shift, and go to state 14
    WITH        shift, and go to state 15
    BEGIN       shift, and go to state 16
    COMMIT      shift, and go to state 17
    ROLLBACK    shift, and go to state 18

    $default  reduce using rule 296 (opt_with_clause)

    input                  go to state 19
    statement_list         go to state 20
    statement              go to state 21
    preparable_statement   go to state 22
    transaction_statement  go to state 23
    prepare_statement      go to state 24
    execute_statement      go to state 25
    import_statement       go to state 26
    export_statement       go to state 27
    show_statement         go to state 28
    create_statement       go to state 29
    drop_statement         go to state 30
    alter_statement        go to state 31
    delete_statement       go to state 32
    truncate_statement     go to state 33
    insert_statement       go to state 34
    update_statement       go to state 35
    select_statement       go to state 36
    opt_with_clause        go to state 37
    with_clause            go to state 38


State 1

   91 drop_statement: DEALLOCATE • PREPARE IDENTIFIER

    PREPARE  shift, and go to state 39


State 2

   99 truncate_statement: TRUNCATE • table_name

    IDENTIFIER  shift, and go to state 40

    table_name  go to state 41


State 3

   32 execute_statement: EXECUTE • IDENTIFIER
   33                  | EXECUTE • IDENTIFIER '(' opt_literal_list ')'

    IDENTIFIER  shift, and go to state 42


State 4

   30 prepare_statement: PREPARE • IDENTIFIER FROM prepare_target_query

    IDENTIFIER  shift, and go to state 43


State 5

   43 show_statement: DESCRIBE • table_name

    IDENTIFIER  shift, and go to state 40

    table_name  go to state 44


State 6

   44 create_statement: CREATE • TABLE opt_not_exists table_name FROM IDENTIFIER FILE file_path
   45                 | CREATE • TABLE opt_not_exists table_name '(' table_elem_commalist ')'
   46                 | CREATE • TABLE opt_not_exists table_name AS select_statement
   47                 | CREATE • INDEX opt_not_exists opt_index_name ON table_name '(' ident_commalist ')'
   48                 | CREATE • VIEW opt_not_exists table_name opt_column_list AS select_statement

    INDEX  shift, and go to state 45
    TABLE  shift, and go to state 46
    VIEW   shift, and go to state 47


State 7

   98 delete_statement: DELETE • FROM table_name opt_where

    FROM  shift, and go to state 48


State 8

   34 import_statement: IMPORT • FROM file_type FILE file_path INTO table_name

    FROM  shift, and go to state 49


State 9

  100 insert_statement: INSERT • INTO table_name opt_column_list VALUES '(' literal_list ')'
  101                 | INSERT • INTO table_name opt_column_list select_no_paren

    INTO  shift, and go to state 50


State 10

  104 update_statement: UPDATE • table_ref_name_no_alias SET update_clause_commalist opt_where

    IDENTIFIER  shift, and go to state 40

    table_ref_name_no_alias  go to state 51
    table_name               go to state 52


State 11

   95 alter_statement: ALTER • TABLE opt_exists table_name alter_action

    TABLE  shift, and go to state 53


State 12

   35 import_statement: COPY • table_name FROM file_path opt_file_type
   40 export_statement: COPY • table_name TO file_path opt_file_type

    IDENTIFIER  shift, and go to state 40

    table_name  go to state 54


State 13

   89 drop_statement: DROP • TABLE opt_exists table_name
   90               | DROP • VIEW opt_exists table_name
   92               | DROP • INDEX opt_exists IDENTIFIER

    INDEX  shift, and go to state 55
    TABLE  shift, and go to state 56
    VIEW   shift, and go to state 57


State 14

   41 show_statement: SHOW • TABLES
   42               | SHOW • COLUMNS table_name

    COLUMNS  shift, and go to state 58
    TABLES   shift, and go to state 59


State 15

  297 with_clause: WITH • with_description_list

    IDENTIFIER  shift, and go to state 60

    with_description_list  go to state 61
    with_description       go to state 62


State 16

   25 transaction_statement: BEGIN • opt_transaction_keyword

    TRANSACTION  shift, and go to state 63

    $default  reduce using rule 29 (opt_transaction_keyword)

    opt_transaction_keyword  go to state 64


State 17

   27 transaction_statement: COMMIT • opt_transaction_keyword

    TRANSACTION  shift, and go to state 63

    $default  reduce using rule 29 (opt_transaction_keyword)

    opt_transaction_keyword  go to state 65


State 18

   26 transaction_statement: ROLLBACK • opt_transaction_keyword

    TRANSACTION  shift, and go to state 63

    $default  reduce using rule 29 (opt_transaction_keyword)

    opt_transaction_keyword  go to state 66


State 19

    0 $accept: input • $end

    $end  shift, and go to state 67


State 20

    1 input: statement_list • opt_semicolon
    3 statement_list: statement_list • ';' statement

    ';'  shift, and go to state 68

    $default  reduce using rule 316 (opt_semicolon)

    opt_semicolon  go to state 69


State 21

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 22

    5 statement: preparable_statement • opt_hints

    WITH  shift, and go to state 70

    $default  reduce using rule 20 (opt_hints)

    opt_hints  go to state 71


State 23

   18 preparable_statement: transaction_statement •

    $default  reduce using rule 18 (preparable_statement)


State 24

    4 statement: prepare_statement • opt_hints

    WITH  shift, and go to state 70

    $default  reduce using rule 20 (opt_hints)

    opt_hints  go to state 72


State 25

   17 preparable_statement: execute_statement •
